src/main/kotlin/com/example/backendsig/error/exception/NotFoundException.kt
package com.example.backendsig.error.exception

import java.lang.RuntimeException

class NotFoundException(message: String): RuntimeException(message)